2000-05-05  OKUJI Yoshinori  <okuji@gnu.org>

	Ignore any memory holes when passing the maximum memory address
	to non-Multiboot kernels (i.e. Linux and *BSD).
	
	* stage2/common.c [!STAGE1_5] (extended_memory): New global
	variable.
	(init_bios_info) [!STAGE1_5]: Change the type of CONT, MEMTMP
	and ADDR to unsigned long from int.
	Set EXTENDED_MEMORY to MBI.MEM_UPPER by default.
	If MBI.MMAP_LENGTH is not zero, set EXTENDED_MEMORY to the
	maximum available address, ignoring any memory holes.
	If MBI.MMAP_LENGTH is zero but get_eisamemsize returns other
	than -1, set EXTENDED_MEMORY to (CONT >> 10) + 0x3c00 if CONT is
	non-zero, otherwise, set it to MEMTMP.
	* stage2/shared.h [!STAGE1_5] (extended_memory): Declared.
	* stage2/boot.c (load_image): Always pass the "mem=" option to a
	Linux kernel, using EXTENDED_MEMORY instead of MBI.MEM_UPPER.
	(bsd_boot): Use EXTENDED_MEMORY instead of MBI.MEM_UPPER.
	
2000-04-30  OKUJI Yoshinori  <okuji@gnu.org>

	* stage1/stage1.S (message): Use lodsb instead of incw and movb.
	From Andrew Clausen <clausen@gnu.org>.

	* stage1/stage1.S (copy_buffer): Set %cx to 0x100 and use movsw
	instead of movsb, since it is guaranteed that the region is
	properly aligned.
	
2000-04-29  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/builtins.c (setup_func): Use SECTOR_BITS instead of
	SECTOR_SIZE to compute BLOCKSIZE.

2000-04-26  OKUJI Yoshinori  <okuji@gnu.org>

	* netboot/depca.c: Copied from Etherboot-4.6.0.
	
2000-04-23  OKUJI Yoshinori  <okuji@gnu.org>

	More security-related features.
	
	* stage2/builtins.c (auth): New global variable.
	(configfile_func): Clear AUTH before jumping to cmain.
	(lock_func): New function.
	(builtin_lock): New variable.
	(password_func): Make sure that LEN + 2 is less than or equal to
	PASSWORD_BUFLEN, because now the password must be terminated
	with double NULs, in order to permit an empty configuration file
	name.
	Copy LEN bytes from ARG to PASSWORD, instead of LEN + 1 bytes.